# Pomodoro

./: .gitignore  README.md
pomodoro/: CMakeLists.txt  DbViewerWindow.qml  Main.qml  README.md  SettingsWindow.qml  main.cpp  pomodoro.desktop  pomodorostorage.cpp  pomodorostorage.h  pomodorotimer.cpp  pomodorotimer.h
pomodoro/pomodoro/: DbViewerWindow.qml  SettingsWindow.qml
